Mlog Documentation/ProcessorUI/styles.css
@font-face {
    font-family: 'Audiowide';
    src: url('../font/Audiowide-Regular.ttf') format('truetype'); 
    /* font-weight: 400; */
    /* font-style: normal; */
}

* {
    font-family: "Audiowide", sans-serif;

    /* -webkit-text-stroke: 1px;
    -webkit-text-stroke-color: black; */
    /* -webkit-text-fill-color: white; */
}
body {
    background-color: #000;
    display:flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    min-height:90vh;
    margin: 5vh;
    overflow:auto;
    touch-action: none;
}

.loading {
    position: fixed; 
    color: rgb(255, 255, 255); 
    background-color: #0d0d0d;
    border-radius: 20px;
    border: #3c2f2f solid 10px;
    width: 50vw;
    height: 30vh;
    font-size: calc(20px + 1vw); 
    text-align: center; 
    justify-content: center ;
    user-select: none; 
    overflow-wrap: break-word; 
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    display: flex;
    flex-direction: column;
}

.loadingSub {
    position: absolute;
    width: 100%;
    color: rgb(255, 255, 255); 
    font-size: clamp(12px, 1.5vw, 20px); 
    text-align: center; 
    bottom: 1.5vh;
    user-select: none; 
    overflow-wrap: break-word; 
}

.container {
    display: block; 
    user-select: text;
}

.container:focus {
    outline: 100px solid gray;
    border-radius: 7px
}

.placementPreview{
    /* background-color: #a08a8a; */
    border: white solid 5px;
    border-radius: 5px;
    padding: 0px 10px 10px 10px;
    min-width: clamp(300px, 60vw, 1000px);
    max-width: 60vw;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
    position: relative;
    height: 75px;
    margin-bottom:20px ;
}

.menu {
    display: none;
    position: fixed;  /* Position fixed relative to the viewport */
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);  /* Semi-transparent background */
    z-index: 9999;  /* Ensures the menu is on top of everything */
    justify-content: center;
    align-items: center;
    color: white;
    user-select: none;
}

.alert {
    position: fixed;
    color: white;
    top: 30px;
    background-color:#1a1a1a;
    width: 400px;
    max-width: 80vw;
    height: 80px;
    text-align: center;
    line-height: 4;
    font-size: larger;
    border-radius: 20px;
    border: 7px solid #3c2f2f;
    opacity: 1;
    z-index: 1;
    display: none;
}

.alertShow{
    opacity: 0;
    transition: opacity 1s ease-in; 
}
.wizard-content {
    background-color: rgb(0, 0, 0);
    color: rgb(248, 248, 248);
    padding: 0.5vw;
    outline-style: solid;
    outline-width: 5px;
    outline-color: rgb(80, 80, 80);
    border-radius: 10px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    user-select: none;
    width: fit-content;
    max-height: 80vh;
    overflow: scroll;
    font-size: clamp(14px, 10vw, 18px);
}

.wizard-content::-webkit-scrollbar{
    width: 12px; /* Set the width of the scrollbar */
    height: 12px;
}
.wizard-content::-webkit-scrollbar-track{
    background-color: transparent;
}
.wizard-content::-webkit-scrollbar-thumb{
    background-color:#3c2f2f; /* Make the thumb background transparent */
}

.pencilMenu {
    max-height: 20px;
    max-width: 20px;
    cursor: pointer;
    user-select: none;
}

.popUpMenu {
    display: none;
    position: absolute;
    background-color: black;
    overflow-y: scroll;
    max-height: 80vh;
    color: white;
    border: 5px solid #3c2f2f;
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
    padding: 10px;
    z-index: 1000;
    cursor: pointer;
    user-select: none;
}
    .popUpMenu div:hover{
        background-color: #3c2f2f;
        padding: 2px 10px 2px 10px;
    }
    .popUpMenu div {
        padding: 2px 7px 2px 7px;
    }
    .popUpMenu::-webkit-scrollbar{
        width: 12px; /* Set the width of the scrollbar */
        height: 12px;
    }
    .popUpMenu::-webkit-scrollbar-track{
        background-color: transparent;
    }
    .popUpMenu::-webkit-scrollbar-thumb{
        background-color:#3c2f2f; /* Make the thumb background transparent */
    }


.line {
    width: 100%; 
    text-align: center; 
    border-bottom: 4px solid #5b5b5b; 
    line-height: 0.1em;
    margin: 10px 0 20px; 
}

.wizard-title {
    display: flex; 
    white-space: nowrap;
    gap: 10px;
    color: #5b5b5b;
    /* font-weight: 600; */
    padding: 1vh 1vw 0px 1vw;
    padding-bottom: clamp(8px, 1.5vw, 10px);
    font-size: clamp(12px, 2vw, 18px);
    user-select: none;
    height: 3vh;
}

.addButtons button {
    /* border-radius: 7px; */
    border: none;
    background: none;
    -webkit-text-stroke-width: 0.54px;
    -webkit-text-stroke-color: rgb(76, 76, 76);
    cursor: pointer;
    width: 100%;
    margin: 0px;
    user-select: none;
    padding: clamp(5px, 1.5vw,10px);
    font-size: clamp(12px, 2vw, 18px);
}
.addButtons button:hover {
    background-color:rgb(67, 67, 67) !important;
    border-radius: 5px;
    user-select: none;
}

.closeMenuBtn {
    background: black;
    color: white;
    border:none;
    border-radius: 10px;
    cursor: pointer;
    font-size: large;
    outline-style:solid;
    outline-width: 5px;
    margin-left: 10px;
    width:fit-content;
    padding: 5px 20px 5px 20px;
    height: fit-content;
    outline-color: #1a1a1a;
}

.addItemsMenu, .exportCode {
    background: black;
    color: white;
    border:none;
    border-radius: 10px;
    cursor: pointer;
    font-size: calc(10px + 1vw);
    outline-style:solid;
    outline-width: 5px;
    margin-left: 10px;
    width:fit-content;
    min-width: 100px;
    min-height: 30px;
    padding: 10px;
    height: fit-content;
    outline-color: #1a1a1a;
    max-width: 50vw;
}

footer {
    position: fixed;
    bottom: 0;
    margin-bottom: 20px;
}

.gridButton {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    justify-items: center;
    align-items: center;
}

.operation button, .operation {
    color: #877bad !important;
    border-color: #877bad !important;
}

.iNo button, .ino {
    color: #a08a8a !important;
    border-color: #a08a8a !important;
}

.blockControl button, .blockControl {
    color: #d4816b !important;
    border-color: #d4816b !important;
}

.flowControl button, .flowControl{
    color: #6bb2b2 !important;
    border-color: #6bb2b2 !important;
}

.unitControl button, .unitControl{
    color: #c7b59d !important;
    border-color: #c7b59d !important;
}


/* .menuTitle {
    width: 100%; 
    border-bottom: 1px solid #000; 
    line-height: 0.1em;
    margin: 10px 0 20px; 
    display: flex;
} */


.editable {
    cursor: text;
    /* text-decoration: underline;
    text-decoration-thickness: 2.5px;
    text-underline-offset: 6px; */
    border-bottom: 3px solid;
    color: #ffffff !important;
    min-width: 15px;
    user-select: all !important;
}

.editable:focus {
    outline: 2px solid gray;
    border-radius: 7px
}

.toggleableField {
    display: none;
}

.jumpTo {
    margin-left: auto;
    padding-right: 20px;
}

.jumpArrowTriangle {
    position: absolute;
    right: 0;
    max-height: 20px;
    max-width: 20px;
    cursor: grab;
    user-select: none;
}

.block-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 4px;
    /* margin-top: 13px; */
    height: 31px;
    /* font-weight: bold; */
    user-select: none;
    margin: 0;
}

.headerText {
    font-size: 16px;
    /* color: black; */
    /* font-weight: bolder;
    -webkit-text-fill-color: transparent;
    -webkit-text-stroke: 1px;
    -webkit-text-stroke-color: black; */
}

.block-header .controls {
    display: flex;
    gap: 5px;
}

.block-header .controls span {
    width: 15px;
    height: 15px;
    background-color: #3c2f2f;
    display: block;
    border-radius: 50%;
    text-align: center;
    line-height: 18px;
    cursor: pointer;
}

.block-content {
    background-color: #0d0d0d;
    border: 2px solid #3c2f2f;
    padding: 5px;
    border-radius: 3px;
}

.block-content .code {
    display: flex;
    gap: 5px;
    align-items: center;
    flex-wrap: wrap;
}

.block-content .code span{
    padding: 4px 5px;
    user-select: none;
    text-shadow: 0px 1.5px 0px rgb(52, 52, 52);
    /* border-radius: 10px; */
    
}

canvas {
    position: absolute;
    left: 99.9%;
    /* top: 50%; */
    background-color: none;
    width: auto;
    color: white !important;
    z-index: 4;
}


.iNo-container {
    background-color: #a08a8a;
    border-radius: 5px;
    padding: 0px 10px 10px 10px;
    color: #fff;
    min-width: clamp(300px, 60vw, 1000px);
    max-width: 60vw;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
    font-size: 14px;
    position: relative;
    margin-bottom:20px ;
}

.blockControl-container {
    background-color: #a66b5d;
    border-radius: 5px;
    padding: 0px 10px 10px 10px;
    color: #fff;
    min-width: clamp(300px, 60vw, 1000px);
    max-width: 60vw;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
    font-size: 14px;
    position: relative;
    margin-bottom:20px ;
}


.operation-container {
    background-color: #877bad;
    border-radius: 5px;
    padding: 0px 10px 10px 10px;;
    color: #fff;
    min-width: clamp(300px, 60vw, 1000px);
    max-width: 60vw;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
    font-size: 14px;
    position: relative;
    margin-bottom:20px ;
}

.flowControl-container {
    background-color: #6bb2b2;
    border-radius: 5px;
    padding: 0px 10px 10px 10px;;
    color: #fff;
    min-width: clamp(300px, 60vw, 1000px);
    max-width: 60vw;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
    font-size: 14px;
    position: relative;
    margin-bottom:20px ;
}

.unitControl-container {
    background-color: #c7b59d;
    border-radius: 5px;
    padding: 0px 10px 10px 10px;
    color: #fff;
    min-width: clamp(300px, 60vw, 1000px);
    max-width: 60vw;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
    font-size: 14px;
    position: relative;
    margin-bottom:20px ;
}
    
    

